# first1000days-linked-cohort-lab

./: .gitignore  CITATION.cff  COMPLETION_REPORT.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  sitecustomize.py
.github/: REPOSITORY_DESCRIPTION.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
assets/screenshots/: README.md
config/: analysis.yml  linkage_rules.yml  simulation.yml
data/: data_dictionary.csv  linkage_rulebook.csv
data/synthetic/: README.md
docs/: ANALYSIS_CARD.md  CAUSAL_ASSUMPTIONS.md  DATA_DICTIONARY.md  DEMO_SCRIPT.md  ENGINEERING_DECISIONS.md  ETHICS_AND_LIMITATIONS.md  EXPOSURE_WINDOW_SPECIFICATION.md  LINKAGE_RULEBOOK.md  METHODS_NOTE.md  MODEL_CARD.md  PORTFOLIO_EVIDENCE_NOTE.md  PROJECT_ALIGNMENT.md  REPOSITORY_REFERENCE_FOR_EMAIL.md  SCREENSHOT_CAPTURE_INSTRUCTIONS.md  USER_GUIDE.md
pages/: 1_Overview.py  2_Linkage_Audit.py  3_Exposure_Windows.py  4_Educational_Trajectories.py  5_Causal_Design_Lab.py  6_Precision_Risk_Evaluation.py  7_Reproducibility_and_Limits.py
reports/causal_demo/: causal_estimates.csv  (+2 more)
scripts/: build_analysis_cohort.py  capture_screenshots.py  generate_demo_data.py  generate_full_report.py  package_release.py  privacy_scan.py  run_causal_demo.py  run_linkage_audit.py  run_prediction_demo.py
tests/: conftest.py  test_bootstrap.py  test_causal.py  test_cohort.py  test_corruption.py  test_evaluation.py  test_exposure_windows.py  test_hashing_config.py  test_linkage.py  test_prediction.py  test_reporting.py  test_schemas.py  test_synthetic.py  test_trajectories.py
(+62 files in other folders)
